Добавлен выпадающий список для выбора SVG-файла

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 <body>
     <select id="svg-selector">
-        <option value="karta1.svg">SVG 1</option>
+        <option value="karta.svg">SVG 1</option>
         <option value="karta2.svg">SVG 2</option>
         <option value="karta3.svg">SVG 3</option>
         <!-- Добавьте дополнительные опции для каждого SVG-файла -->
