Добавлен выпадающий список для выбора SVG-файла

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 </head>
 <body>
     <select id="svg-selector">
-        <option value="karta.svg">SVG 1</option>
-        <option value="karta2.svg">SVG 2</option>
-        <option value="karta3.svg">SVG 3</option>
+        <option value="karta.svg">karta</option>
+        <option value="karta2.svg">karta2</option>
+        <option value="karta3.svg">karta3</option>
         <!-- Добавьте дополнительные опции для каждого SVG-файла -->
     </select>
     <div id="svg-container"></div>
