--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
             margin: 0;
             height: 100vh;
         }
-        #svg-container {
-            width: 100%;
-            max-width: 600px;
-            margin-top: 20px; /* добавил отступ для ясности */
-        }
+       #svg-container {
+    margin-top: 20px;
+    padding: 20px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
         #svg-selector {
             margin-top: 20px;
         }
