--- a/index.html
+++ b/index.html
@@ -21,8 +21,12 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
         #svg-selector {
-            margin-top: 20px;
-        }
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #fff;
+}
     </style>
 </head>
 <body>
