--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 </head>
 <body>
     <select id="svg-selector">
-        <option value="karta.svg">karta</option>
-        <option value="karta2.svg">karta2</option>
-        <option value="karta3.svg">karta3</option>
+        <option value="Политическая карта.svg">Политическая карта</option>
+        <option value="Карта Высот.svg">Карта Высот</option>
+        <option value="Карта Биомов.svg">Карта Биомов</option>
         <!-- Добавьте дополнительные опции для каждого SVG-файла -->
     </select>
     <div id="svg-container"></div>
