--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
             height: 100vh;
         }
        #svg-container {
+    overflow-x: scroll;
+    width: 100%;
     margin-top: 20px;
     padding: 20px;
     border: 1px solid #ddd;
