--- a/index.html
+++ b/index.html
@@ -23,11 +23,15 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
         #svg-selector {
+    position: fixed;
+    top: 10px;
+    left: 10px;
     padding: 10px;
     font-size: 16px;
     border: 1px solid #ccc;
     border-radius: 5px;
     background-color: #fff;
+    z-index: 1000;
 }
     </style>
 </head>
