--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     overflow-x: scroll;
     width: 100%;
     margin-top: 20px;
+    margin-left: 10px;
+    margin-right: 10px;
     padding: 20px;
     border: 1px solid #ddd;
     border-radius: 5px;
