--- a/index.html
+++ b/index.html
@@ -13,11 +13,14 @@
             height: 100vh;
         }
        #svg-container {
+    position: fixed;
+    top: 15px;
+    right: 15px;
+    bottom: 15px;
+    left: 15px;
     overflow-x: scroll;
     width: 100%;
     margin-top: 20px;
-    margin-left: 10px;
-    margin-right: 10px;
     padding: 20px;
     border: 1px solid #ddd;
     border-radius: 5px;
