--- a/index.html
+++ b/index.html
@@ -13,14 +13,13 @@
             height: 100vh;
         }
        #svg-container {
+    overflow-x: scroll;
+    width: 100%;
     position: fixed;
     top: 15px;
     right: 15px;
     bottom: 15px;
-    left: 15px;
-    overflow-x: scroll;
-    width: 100%;
-    margin-top: 20px;
+    left: 15px;    margin-top: 20px;
     padding: 20px;
     border: 1px solid #ddd;
     border-radius: 5px;
