--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     top: 15px;
     right: 15px;
     bottom: 15px;
-    left: 15px;    margin-top: 20px;
+    left: 15px;    
+    margin-top: 20px;
     padding: 20px;
     border: 1px solid #ddd;
     border-radius: 5px;
