--- a/index.html
+++ b/index.html
@@ -13,19 +13,23 @@
             height: 100vh;
         }
        #svg-container {
-    overflow-x: scroll;
-    width: 100%;
     position: fixed;
-    top: 15px;
-    right: 15px;
-    bottom: 15px;
-    left: 15px;    
-    margin-top: 20px;
-    padding: 20px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    background-color: #fff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    top: 10px;
+    left: 10px;
+    width: 80vw; /* 80% от ширины окна */
+    height: 80vh; /* 80% от высоты окна */
+    overflow: hidden; /* чтобы скрыть части карты за пределами контейнера */
+}
+
+svg {
+    width: 100%;
+    height: 100%;
+    transform-origin: top left; /* установка точки трансформации в верхний левый угол */
+    transition: transform 0.3s ease; /* плавное изменение масштаба с использованием анимации */
+}
+
+#svg-container:hover svg {
+    transform: scale(1.5); /* пример увеличения масштаба при наведении */
 }
         #svg-selector {
     position: fixed;
