--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <label for="svg-selector">Выберите режим:</label>
         <select id="svg-selector" onchange="loadSVG()">
             <option value="Политическая в карта.svg">Политическая карта</option>
-            <option value="Карта Высот.svg">Карта высот</option>
+            <option value="Карта Высот.svg">Карта Высот</option>
             <option value="Карта Биомов.svg">Карта Биомов</option>
             <!-- Добавьте другие варианты, если необходимо -->
         </select>
