--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 <body>
     <div id="select-container">
-        <label for="svg-selector">Выберите SVG:</label>
+        <label for="svg-selector">Выберите режим:</label>
         <select id="svg-selector" onchange="loadSVG()">
             <option value="Политическая в карта.svg">Политическая карта</option>
             <option value="Карта Высот.svg">Карта Высот</option>
