--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
         body {
             display: flex;
             flex-direction: column;
-            align-items: center;
+            align-items: left;
             margin: 0;
             height: 100vh;
         }
         #svg-container {
             width: 100%;
-            max-width: 60px;
+            max-width: 600px;
             margin-top: 20px; /* добавил отступ для ясности */
         }
         #svg-selector {
