--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
             margin: 0;
             height: 100vh;
         }
-        #svg-container {
-            width: 100%;
-            max-width: 600px;
-            margin-top: 20px; /* добавил отступ для ясности */
-        }
+      #svg-container {
+    width: 100%;
+    max-width: 600px;
+    margin-top: 20px; /* добавил отступ для ясности */
+    border: 5px solid #AFEEEE; /* Добавлен стиль рамки: 2 пикселя, синий цвет (можете изменить цвет на нужный) */
+    box-sizing: border-box; /* Учитывать толщину рамки внутри общей ширины блока */
+       }
+
         #svg-selector {
             margin-top: 20px;
         }
