--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         body {
             display: flex;
             flex-direction: column;
-            align-items: left;
+            align-items: center;
             margin: 0;
             height: 100vh;
         }
