--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
             margin: 0;
             height: 100vh;
         }
-     #svg-container {
+    #svg-container {
     width: 100%;
     max-width: 600px;
     margin-top: 20px;
-    overflow: hidden; /* Добавлен стиль, чтобы обрезать любое содержимое, выходящее за границы */
-    border: 10px solid #007bff;
+    border: 2px solid #007bff;
     box-sizing: border-box;
+    padding: 10px; /* Внутренний отступ для отображения SVG внутри рамки */
 }
 
 #svg-container svg {
-    width: 100%; /* Убедитесь, что SVG занимает 100% ширины контейнера */
-    height: auto; /* Сохранить пропорции высоты */
+    width: 100%;
+    height: auto;
+    box-sizing: border-box; /* Учитывать толщину рамки внутри общей ширины SVG */
 }
-
         #svg-selector {
             margin-top: 20px;
         }
