--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         body {
             display: flex;
             flex-direction: column;
-            align-items: center;
+            align-items: left;
             margin: 0;
             height: 100vh;
         }
@@ -18,21 +18,13 @@
             margin-top: 20px;
             border: 2px solid #007bff;
             box-sizing: border-box;
-            overflow: hidden;
-        }
-        #svg-viewport {
-            width: 100%;
-            height: 100%;
-            overflow: auto;
         }
         #svg-selector {
             margin-top: 20px;
         }
-        #zoom-in-btn, #zoom-out-btn {
-            margin-top: 10px;
-            cursor: pointer;
-        }
     </style>
+    <!-- Добавьте эту ссылку в раздел head -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/svg-pan-zoom/3.6.1/svg-pan-zoom.min.js"></script>
 </head>
 <body>
     <select id="svg-selector">
@@ -41,17 +33,10 @@
         <option value="Карта Биомов.svg">Карта Биомов</option>
         <!-- Добавьте дополнительные опции для каждого SVG-файла -->
     </select>
-    <div id="svg-container">
-        <div id="svg-viewport"></div>
-        <button id="zoom-in-btn">Увеличить</button>
-        <button id="zoom-out-btn">Уменьшить</button>
-    </div>
+    <div id="svg-container"></div>
     <script>
-        const svgContainer = document.getElementById('svg-viewport');
         const svgSelector = document.getElementById('svg-selector');
-        const zoomInBtn = document.getElementById('zoom-in-btn');
-        const zoomOutBtn = document.getElementById('zoom-out-btn');
-        let currentScale = 1;
+        const svgContainer = document.getElementById('svg-container');
 
         function loadSvg() {
             const selectedSvg = svgSelector.value;
@@ -59,32 +44,23 @@
                 .then(response => response.text())
                 .then(svgText => {
                     svgContainer.innerHTML = svgText;
-                    currentScale = 1; // Сбросить текущий масштаб при загрузке нового SVG
-                    applyScale();
+                    initPanZoom();
                 })
                 .catch(error => console.error('Error loading SVG:', error));
         }
 
-        function applyScale() {
-            svgContainer.style.transform = `scale(${currentScale})`;
-        }
-
-        function zoomIn() {
-            currentScale += 0.1;
-            applyScale();
-        }
-
-        function zoomOut() {
-            currentScale -= 0.1;
-            applyScale();
+        function initPanZoom() {
+            svgPanZoom(svgContainer, {
+                zoomEnabled: true,
+                controlIconsEnabled: true,
+                fit: true,
+                center: true,
+                contain: true
+            });
         }
 
         // Загрузка SVG-файла при выборе нового значения в выпадающем списке
         svgSelector.addEventListener('change', loadSvg);
-
-        // Обработчики для кнопок управления масштабом
-        zoomInBtn.addEventListener('click', zoomIn);
-        zoomOutBtn.addEventListener('click', zoomOut);
 
         // Инициализация при открытии страницы
         loadSvg();
