--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         #svg-viewport {
             width: 100%;
             height: 100%;
-            overflow: auto;
+            overflow: hidden; /* Скрытие полос прокрутки */
             cursor: grab;
         }
 
