--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         #svg-viewport {
             width: 100%;
             height: 100%;
-            overflow: hidden; /* Скрытие полос прокрутки */
+            overflow: hidden;
             cursor: grab;
         }
 
@@ -62,7 +62,9 @@
         let currentScale = 1;
         let isDragging = false;
         let dragStartX = 0;
+        let dragStartY = 0;
         let scrollStartX = 0;
+        let scrollStartY = 0;
 
         function loadSvg() {
             const selectedSvg = svgSelector.value;
@@ -94,45 +96,14 @@
             if (event.button === 0) {
                 isDragging = true;
                 dragStartX = event.clientX;
+                dragStartY = event.clientY;
                 scrollStartX = svgContainer.scrollLeft;
+                scrollStartY = svgContainer.scrollTop;
                 svgContainer.style.cursor = 'grabbing';
             }
         }
 
         function handleMouseMove(event) {
             if (isDragging) {
-                const dragDelta = event.clientX - dragStartX;
-                const newScrollLeft = scrollStartX - dragDelta;
-                const maxScrollLeft = svgContainer.scrollWidth - svgContainer.clientWidth;
-                svgContainer.scrollLeft = Math.min(maxScrollLeft, Math.max(0, newScrollLeft));
-            }
-        }
-
-        function handleMouseUp() {
-            isDragging = false;
-            svgContainer.style.cursor = 'grab';
-        }
-
-        function handleWheel(event) {
-            event.preventDefault();
-            if (event.deltaY > 0) {
-                zoomOut();
-            } else {
-                zoomIn();
-            }
-        }
-
-        svgSelector.addEventListener('change', loadSvg);
-        zoomInBtn.addEventListener('click', zoomIn);
-        zoomOutBtn.addEventListener('click', zoomOut);
-
-        svgContainer.addEventListener('mousedown', handleMouseDown);
-        window.addEventListener('mousemove', handleMouseMove);
-        window.addEventListener('mouseup', handleMouseUp);
-        svgContainer.addEventListener('wheel', handleWheel);
-
-        loadSvg();
-    </script>
-</body>
-
-</html>
+                const dragDeltaX = event.clientX - dragStartX;
+                const dragDeltaY = event.clientY - d
